[package]
name = "motti"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.14"
wasm-bindgen = "0.2.37"
console_error_panic_hook="0.1.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Performance',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'console'
]